Fixes and Testing on IE browser 84.5

--- a/styles/billing.css
+++ b/styles/billing.css
@@ -100,6 +100,7 @@ th {
   border: 1px solid #707070;
   border-bottom: none;
   border-top: none;
+  font-size: 16px;
 }
 
 tbody {
