--- a/styles/diagnostic.css
+++ b/styles/diagnostic.css
@@ -99,6 +99,7 @@ th {
   border: 1px solid #707070;
   border-bottom: none;
   border-top: none;
+  font-size: 16px;
 }
 
 tbody {
