--- a/styles/expenses.css
+++ b/styles/expenses.css
@@ -62,6 +62,7 @@ th {
   border: 1px solid #707070;
   border-bottom: none;
   border-top: none;
+  font-size: 16px;
 }
 
 tbody {
@@ -160,6 +161,7 @@ tbody tr td {
           filter: drop-shadow(2px 2px 2px gray);
   background-color: white;
   font-family: inherit;
+  background-position-y: 0;
 }
 
 .far {
