--- a/styles/financial-report.css
+++ b/styles/financial-report.css
@@ -22,16 +22,21 @@
   
   .div-btn {
     border: none;
-    margin-right: 10px;
-    margin-left: 10px;
     text-transform: uppercase;
     background-color: #B597DC;
-    width: 220px;
-    height: 60px;
     text-align: center;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: bold;
+    width: 170px;
+    height: 50px;
+    color: #302e2e;
+    font-weight: 550;
+    text-transform: uppercase;
     font-family: inherit;
+    margin: 10px 10px 0 10px;
+    cursor: pointer;
+    filter: drop-shadow(1px 1px 2px gray);
+    -webkit-filter: drop-shadow(1px 1px 2px gray);
   }
   
   .btnactive {
