--- a/styles/layout.css
+++ b/styles/layout.css
@@ -12,7 +12,9 @@ body {
 h1 {
   font-size: 27px;
 }
-
+td, th{
+  font-size: 16px;
+}
 .container {
   display: -ms-grid;
   display: grid;
