--- a/styles/modals.css
+++ b/styles/modals.css
@@ -523,7 +523,7 @@ hr {
 
 .inp-modal9 {
   width: 131px;
-  padding-left: 10px;
+  padding-left: 0px;
   height: 34px;
   border: none;
   text-align: center;
