--- a/styles/patients.css
+++ b/styles/patients.css
@@ -77,12 +77,14 @@
     height: 40px;
     text-align: center;
     vertical-align: middle;
+    font-size: 16px;
   }
   
   tbody tr td {
     height: 40px;
     text-align: center;
     vertical-align: middle;
+    font-size: 16px;
   }
   
   .patient-name-col {
